<resources>
    <string name="app_name">Tv Shows</string>

    <!-- activity titles -->
    <string name="my_shows">My Shows</string>
    <string name="tv_credits">TV Credits</string>
    <string name="biography">Biography</string>

    <string name="seasons">\u0020Seasons</string>
    <string name="episodes">\u0020Episodes</string>
    <string name="seasons1">\u0020Season</string>
    <string name="episodes1">\u0020Episode</string>
    <string name="votes">\u0020votes</string>
    <string name="genres">Genres:</string>
    <string name="creators">Creator(s):</string>
    <string name="remove">Remove</string>
    <!-- genres -->
    <string name="genre_action_adventure">Action &amp; Adventure</string>
    <string name="genre_animation">Animation</string>
    <string name="genre_comedy">Comedy</string>
    <string name="genre_crime">Crime</string>
    <string name="genre_documentary">Documentary</string>
    <string name="genre_drama">Drama</string>
    <string name="genre_family">Family</string>
    <string name="genre_kids">Kids</string>
    <string name="genre_mystery">Mystery</string>
    <string name="genre_news">News</string>
    <string name="genre_reality">Reality</string>
    <string name="genre_sci_fi_fantasy">Sci-Fi &amp; Fantasy</string>
    <string name="genre_soap">Soap</string>
    <string name="genre_talk">Talk</string>
    <string name="genre_war_politics">War &amp; Politics</string>
    <string name="genre_western">Western</string>


    <string name="discover">Discover</string>
    <string name="filters">Filters</string>

    <string name="sort_by">Sort By:</string>
    <string name="sort_by_vote_average">Vote Average</string>
    <string name="sort_by_popularity">Popularity</string>
    <string name="sort_by_first_air_date_desc">First Air Date (Descending)</string>
    <string name="sort_by_first_air_date_asc">First Air Date (Ascending)</string>


    <string name="vote_average_min">Vote Average min:</string>
    <string name="vote_count_min">Vote Count min:</string>
    <string name="include_genres">Include</string>
    <string name="exclude_genres">Exclude</string>
    <string name="first_air_date_min">First Air Date (after):</string>
    <string name="first_air_date_max">First Air Date (before):</string>

    <string name="cancel">Cancel</string>

    <string name="show_more">more...</string>
    <string name="dismiss">DISMISS</string>
    <string name="add_show">ADD SHOW</string>
    <!-- navigation drawer -->
    <string name="tv_shows">TV Shows</string>
    <string name="search">Search</string>
    <string name="manage_updates">Manage Updates</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- my shows -->
    <string name="are_you_sure">Are you sure you wish to delete?</string>
    <string name="continuing">Continuing</string>
    <string name="finished">Finished</string>
    <string name="favorites">Favorites</string>
    <string name="my_shows_filters">Filters</string>
    <string name="filter">Filter</string>

    <string-array name="my_shows_tabs">
        <item>SHOWS</item>
        <item>UPCOMING</item>
        <item>RECENT</item>
    </string-array>

    <string-array name="show_info_tabs">
        <item>SHOW</item>
        <item>SEASONS</item>
        <item>CAST</item>
        <item>RECOMMENDATIONS</item>
    </string-array>

    <string name="no_connection">No Connection</string>
    <string name="retry">Retry</string>

    <!-- updates -->
    <string name="auto_updates">Update Automatically</string>
    <string name="auto_updates_info">In order for the updates to correctly sync, an update needs to be performed at least once every 3 days.</string>
    <string name="select_all">Select All</string>
    <string name="details_update">Show Details</string>
    <!-- strings to make tmdb requests -->
    <string name="sort_by_vote_average_request">vote_average.desc</string>
    <string name="sort_by_popularity_request">popularity.desc</string>
    <string name="sort_by_first_air_date_desc_request">first_air_date.desc</string>
    <string name="sort_by_first_air_date_asc_request">first_air_date.asc</string>
    <string name="poster_path">http://image.tmdb.org/t/p/w300</string>

    <!--  actor menu links -->
    <string name="title_links">Links</string>
    <string name="link_imdb">IMDb</string>
    <string name="link_tmdb">THE MOVIE DB</string>
    <string name="link_google_search">Google Search</string>
    <string name="link_youtube_search">Youtube Search</string>
    <string name="link_wikipedia">Wikipedia</string>


    <string name="imdb_tv_show_webpage">http://www.imdb.com/title/</string>
    <string name="imdb_actor_webage_start">http://www.imdb.com/name/</string>
    <string name="imdb_actor_webage_end">/?ref_=tt_cl_t4</string>
    <string name="tmdb_tv_show_webpage">https://www.themoviedb.org/tv/</string>
    <string name="google_search_webpage">https://www.google.co.uk/#q=</string>
    <string name="youtube_search_webpage">https://www.youtube.com/results?search_query=</string>
    <string name="wikipedia_webapge">https://en.wikipedia.org/wiki/</string>
    <string name="wikipedia_webpage_end">_(TV_series)</string>

</resources>
