...
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"
                    app:popupTheme="@style/AppTheme.PopupOverlay">
                    <Spinner
                        android:id="@+id/spinner_seasons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:entries="@array/sort_by_options"
                        />
                    </android.support.v7.widget.Toolbar>

...
